New: add password for grafana, try to make flux dashboards work

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -96,7 +96,13 @@ spec:
       sidecar:
         dashboards:
           enabled: true
-          # label: grafana_dashboard
+          flux:
+            flux-cluster:
+              url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/cluster.json
+              datasource: Prometheus
+            flux-control-plane:
+              url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
+              datasource: Prometheus
       dashboardProviders:
         dashboardproviders.yaml:
           apiVersion: 1
@@ -117,14 +123,14 @@ spec:
             allowUiUpdates: true
             options:
               path: /var/lib/grafana/dashboards/flux
-      dashboards:
-        flux:
-          flux-cluster:
-            url: https://raw.githubusercontent.com/fluxcd/flux2/v0.7.6/manifests/monitoring/grafana/dashboards/cluster.json
-            datasource: Prometheus
-          flux-control-plane:
-            url: https://raw.githubusercontent.com/fluxcd/flux2/v0.7.6/manifests/monitoring/grafana/dashboards/control-plane.json
-            datasource: Prometheus
+      #dashboards:
+      #  flux:
+      #    flux-cluster:
+      #      url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/cluster.json
+      #      datasource: Prometheus
+      #    flux-control-plane:
+      #      url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
+      #      datasource: Prometheus
 
       #dashboards:
       #  enabled: true
@@ -163,7 +169,7 @@ spec:
                 values:
                 - "true"
 
-  #valuesFrom:
-  #- kind: Secret
-  #  name: "kube-prometheus-stack-helm-values"
-  #  optional: false
+  valuesFrom:
+  - kind: Secret
+    name: "kube-prometheus-stack-helm-values"
+    optional: false
