--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -15,6 +15,11 @@ spec:
         namespace: flux-system
       interval: 5m0s
   timeout: 10m0s
+  install:
+    crds: Create
+  targetNamespace: monitoring
+  upgrade:
+    crds: CreateReplace
   values:
     prometheus:
       prometheusSpec:
@@ -91,8 +96,8 @@ spec:
 
     grafana:
       enabled: true
-      serviceMonitor:
-        enabled: true
+      # serviceMonitor:
+      #   enabled: true
       sidecar:
         dashboards:
           enabled: true
