Change: change sealed-secrets reconciliation interval 1h -> 1m

--- a/infra/flux-system-extras/sealed-secrets/sealed-secrets.yaml
+++ b/infra/flux-system-extras/sealed-secrets/sealed-secrets.yaml
@@ -14,7 +14,7 @@ spec:
       version: '>=1.15.0-0'
   install:
     crds: Create
-  interval: 1h0m0s
+  interval: 1m0s
   releaseName: sealed-secrets
   targetNamespace: flux-system
   upgrade:
