--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -8,12 +8,11 @@ spec:
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 15.4.4
+      version: '>=15.4.4'
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
         namespace: flux-system
-      interval: 5m0s
   timeout: 10m0s
   # install:
   #   crds: Create
