--- a/infra/storage/nfs-client-provisioner/nfs-client-provisioner.yaml
+++ b/infra/storage/nfs-client-provisioner/nfs-client-provisioner.yaml
@@ -10,6 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: helm-stable
+        namespace: flux-system
       version: '>=1.2.11'
   interval: 5m0s
   releaseName: nfs-client-provisioner
