--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: loki
-  namespace: logs
+  name: loki-stack
+  namespace: logging
 spec:
   interval: 5m0s
   timeout: 3m0s
@@ -14,6 +14,7 @@ spec:
         kind: HelmRepository
         name: grafana
         namespace: flux-system
+  targetNamespace: logging
   values:
     loki:
 
