--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -17,7 +17,6 @@ spec:
   targetNamespace: logging
   values:
     loki:
-
       # replicas: 3
       persistence:
         enabled: true
@@ -30,36 +29,42 @@ spec:
       serviceMonitor:
         enabled: true
 
-      affinity:
-        podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - loki
-            topologyKey: "kubernetes.io/hostname"
+      #affinity:
+      #  podAntiAffinity:
+      #    requiredDuringSchedulingIgnoredDuringExecution:
+      #    - labelSelector:
+      #        matchExpressions:
+      #        - key: app
+      #          operator: In
+      #          values:
+      #          - loki
+      #      topologyKey: "kubernetes.io/hostname"
     promtail:
       serviceMonitor:
         enabled: true
       tolerations:
       - key: "node-role.kubernetes.io/master"
         operator: "Exists"
-      extraScrapeConfigs:
-      - job_name: syslog
-        syslog:
-          listen_address: 0.0.0.0:1514
-          label_structured_data: true
-          labels:
-            job: "syslog"
-        relabel_configs:
-        - source_labels: ['__syslog_message_hostname']
-          target_label: 'host'
-        - source_labels: ['__syslog_message_app_name']
-          target_label: 'app'
-      syslogService:
-        enabled: true
-        type: LoadBalancer
-        port: 1514
-        loadBalancerIP: 10.0.6.51
+      #extraScrapeConfigs:
+      #- job_name: syslog
+      #  syslog:
+      #    listen_address: 0.0.0.0:1514
+      #    label_structured_data: true
+      #    labels:
+      #      job: "syslog"
+      #  relabel_configs:
+      #  - source_labels: ['__syslog_message_hostname']
+      #    target_label: 'host'
+      #  - source_labels: ['__syslog_message_app_name']
+      #    target_label: 'app'
+      #syslogService:
+      #  enabled: true
+      #  type: LoadBalancer
+      #  port: 1514
+      #  loadBalancerIP: 10.0.6.51
+
+    grafana:
+      enabled: false
+      sidecar:
+        datasources:
+          enabled: true
