--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -18,13 +18,13 @@ spec:
   values:
     loki:
       # replicas: 3
-      persistence:
-        enabled: true
-        accessModes:
-        - ReadWriteOnce
-        size: 10Gi
-        annotations: {}
-        storageClassName: nfs
+      #persistence:
+      #  enabled: true
+      #  accessModes:
+      #  - ReadWriteOnce
+      #  size: 10Gi
+      #  annotations: {}
+      #  storageClassName: nfs
 
       serviceMonitor:
         enabled: true
