Change: assign loki to monitoring node

--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -18,16 +18,19 @@ spec:
   values:
     loki:
       # replicas: 3
-      #persistence:
-      #  enabled: true
-      #  accessModes:
-      #  - ReadWriteOnce
-      #  size: 10Gi
-      #  annotations: {}
-      #  storageClassName: nfs
+      persistence:
+        enabled: true
+        accessModes:
+        - ReadWriteOnce
+        size: 10Gi
+        annotations: {}
+        storageClassName: nfs
 
       serviceMonitor:
         enabled: true
+
+      nodeSelector:
+        node-role.kubernetes.io/monitoring: "true"
 
       #affinity:
       #  podAntiAffinity:
