Change: use default storage pv for loki persistence

--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -24,7 +24,7 @@ spec:
         - ReadWriteOnce
         size: 10Gi
         annotations: {}
-        storageClassName: nfs
+        # storageClassName: nfs
 
       serviceMonitor:
         enabled: true
