Change: do not notify HelmRepository changes

--- a/infra/flux-system-extras/notifications/alert.yaml
+++ b/infra/flux-system-extras/notifications/alert.yaml
@@ -14,8 +14,8 @@ spec:
       name: '*'
     - kind: HelmRelease
       name: '*'
-    - kind: HelmRepository
-      name: '*'
+    # - kind: HelmRepository
+    #   name: '*'
     - kind: Bucket
       name: '*'
     - kind: HelmChart
