Change: use default nfs provisionerName

--- a/infra/kube-system/nfs-client-provisioner/nfs-client-provisioner.yaml
+++ b/infra/kube-system/nfs-client-provisioner/nfs-client-provisioner.yaml
@@ -22,7 +22,7 @@ spec:
 
     storageClass:
       create: true
-      provisionerName: k3s.home/nfs-client-provisioner
+      # provisionerName: k3s.home/nfs-client-provisioner
       defaultClass: false
       name: nfs
       allowVolumeExpansion: true
