--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -87,7 +87,7 @@ spec:
       storageSpec:
         volumeClaimTemplate:
           spec:
-            storageClassName: "local-path"
+            storageClassName: local-path
             accessModes: ["ReadWriteOnce"]
             resources:
               requests:
