--- a/infra/logging/loki-stack/loki-stack.yaml
+++ b/infra/logging/loki-stack/loki-stack.yaml
@@ -1,73 +1,72 @@
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: loki-stack
-#   namespace: logging
-# spec:
-#   interval: 5m0s
-#   timeout: 3m0s
-#   chart:
-#     spec:
-#       chart: loki-stack
-#       version: 2.3.1
-#       sourceRef:
-#         kind: HelmRepository
-#         name: grafana
-#         namespace: flux-system
-#   targetNamespace: logging
-#   values:
-#     loki:
-#       # replicas: 3
-#       persistence:
-#         enabled: true
-#         accessModes:
-#         - ReadWriteOnce
-#         size: 10Gi
-#         annotations: {}
-#         storageClassName: nfs
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: loki-stack
+  namespace: logging
+spec:
+  interval: 5m0s
+  timeout: 3m0s
+  chart:
+    spec:
+      chart: loki-stack
+      version: 2.3.1
+      sourceRef:
+        kind: HelmRepository
+        name: grafana
+        namespace: flux-system
+  targetNamespace: logging
+  values:
+    loki:
+      # replicas: 3
+      persistence:
+        enabled: true
+        accessModes:
+        - ReadWriteOnce
+        size: 10Gi
+        storageClassName: nfs
 
-#       serviceMonitor:
-#         enabled: true
+      serviceMonitor:
+        enabled: true
 
-#       nodeSelector:
-#         node-role.kubernetes.io/monitoring: "true"
+      nodeSelector:
+        node-role.kubernetes.io/monitoring: "true"
 
-#       #affinity:
-#       #  podAntiAffinity:
-#       #    requiredDuringSchedulingIgnoredDuringExecution:
-#       #    - labelSelector:
-#       #        matchExpressions:
-#       #        - key: app
-#       #          operator: In
-#       #          values:
-#       #          - loki
-#       #      topologyKey: "kubernetes.io/hostname"
-#     promtail:
-#       serviceMonitor:
-#         enabled: true
-#       tolerations:
-#       - key: "node-role.kubernetes.io/master"
-#         operator: "Exists"
-#       #extraScrapeConfigs:
-#       #- job_name: syslog
-#       #  syslog:
-#       #    listen_address: 0.0.0.0:1514
-#       #    label_structured_data: true
-#       #    labels:
-#       #      job: "syslog"
-#       #  relabel_configs:
-#       #  - source_labels: ['__syslog_message_hostname']
-#       #    target_label: 'host'
-#       #  - source_labels: ['__syslog_message_app_name']
-#       #    target_label: 'app'
-#       #syslogService:
-#       #  enabled: true
-#       #  type: LoadBalancer
-#       #  port: 1514
-#       #  loadBalancerIP: 10.0.6.51
+      #affinity:
+      #  podAntiAffinity:
+      #    requiredDuringSchedulingIgnoredDuringExecution:
+      #    - labelSelector:
+      #        matchExpressions:
+      #        - key: app
+      #          operator: In
+      #          values:
+      #          - loki
+      #      topologyKey: "kubernetes.io/hostname"
+    promtail:
+      serviceMonitor:
+        enabled: true
+      tolerations:
+      - key: "node-role.kubernetes.io/master"
+        operator: "Exists"
+      #extraScrapeConfigs:
+      #- job_name: syslog
+      #  syslog:
+      #    listen_address: 0.0.0.0:1514
+      #    label_structured_data: true
+      #    labels:
+      #      job: "syslog"
+      #  relabel_configs:
+      #  - source_labels: ['__syslog_message_hostname']
+      #    target_label: 'host'
+      #  - source_labels: ['__syslog_message_app_name']
+      #    target_label: 'app'
+      #syslogService:
+      #  enabled: true
+      #  type: LoadBalancer
+      #  port: 1514
+      #  loadBalancerIP: 10.0.6.51
 
-#     grafana:
-#       enabled: false
-#       sidecar:
-#         datasources:
-#           enabled: true
+    grafana:
+      enabled: false
+      sidecar:
+        datasources:
+          enabled: true
