--- a/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
+++ b/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: speedtest-exporter
+  name: speedtest-prometheus
   namespace: monitoring
 spec:
   interval: 5m0s
