Change: enabled kube-prometheus-stack grafana.sidecar.datasources

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -100,6 +100,8 @@ spec:
       sidecar:
         dashboards:
           enabled: true
+        datasources:
+          enabled: true
       dashboardProviders:
         dashboardproviders.yaml:
           apiVersion: 1
