Change: kube-prometheus-stack persistent volume claim template name

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -81,6 +81,8 @@ spec:
 
         storageSpec:
           volumeClaimTemplate:
+            metadata:
+              name: prometheus-kube-prometheus-0
             spec:
               storageClassName: local-path
               accessModes: ["ReadWriteOnce"]
