Change: kube-prometheus-stack volumeclaimtemplate

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -82,7 +82,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             metadata:
-              name: prometheus-kube-prometheus-0
+              name: ""
             spec:
               storageClassName: local-path
               accessModes: ["ReadWriteOnce"]
