--- a/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
+++ b/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
@@ -1,20 +1,20 @@
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: speedtest-prometheus
-#   namespace: monitoring
-# spec:
-#   interval: 5m0s
-#   timeout: 3m0s
-#   chart:
-#     spec:
-#       chart: speedtest-prometheus
-#       version: ">=2.2.1"
-#       sourceRef:
-#         kind: HelmRepository
-#         name: k8s-at-home
-#         namespace: flux-system
-#   values:
-#     serviceMonitor:
-#       enabled: true
-#       interval: "5m"
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: speedtest-prometheus
+  namespace: monitoring
+spec:
+  interval: 5m0s
+  timeout: 3m0s
+  chart:
+    spec:
+      chart: speedtest-prometheus
+      version: ">=2.2.1"
+      sourceRef:
+        kind: HelmRepository
+        name: k8s-at-home
+        namespace: flux-system
+  values:
+    serviceMonitor:
+      enabled: true
+      interval: "5m"
