--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -17,29 +18,38 @@ spec:
   values:
     prometheus:
       prometheusSpec:
-        affinity:
-          nodeAffinity:
-            requiredDuringSchedulingIgnoredDuringExecution:
-              nodeSelectorTerms:
-              - matchExpressions:
-                - key: node-role.kubernetes.io/monitoring
-                  operator: In
-                  values:
-                  - "true"
-
+        ruleSelector: {}
+        ruleNamespaceSelector: {}
+        ruleSelectorNilUsesHelmValues: false
+        serviceMonitorSelector: {}
+        serviceMonitorNamespaceSelector: {}
+        serviceMonitorSelectorNilUsesHelmValues: false
+        podMonitorSelector: {}
+        podMonitorNamespaceSelector: {}
+        podMonitorSelectorNilUsesHelmValues: false
+        retention: 30d
+        enableAdminAPI: true
+        walCompression: true
         additionalScrapeConfigs:
-        - job_name: "ohm-exporter"
+        - job_name: node-exporter
+          honor_timestamps: true
+          static_configs:
+          - targets:
+            - nas.home:9100
+
+        - job_name: ohm-exporter
           scrape_interval: 15s
           static_configs:
-            - targets: [ "192.168.1.23:4445", "192.168.1.12:4445" ]
-        - job_name: "windows-exporter"
+          - targets:
+            - red.home:4445
+            - carbon.home:4445
+
+        - job_name: windows-exporter
           scrape_interval: 15s
           static_configs:
-            - targets: [ "192.168.1.23:9182" ]
-        # - job_name: "esphome-exporter"
-        #   scrape_interval: 15s
-        #   static_configs:
-        #     - targets: [ "192.168.1.214" ]
+          - targets:
+            - red.home:9182
+
         # - job_name: 'kubernetes-service-endpoints'
         #   kubernetes_sd_configs:
         #   - role: endpoints
@@ -53,10 +63,9 @@ spec:
         #     action: replace
         #     target_label: kubernetes_name
 
-        # - job_name: 'kubernetes-pods'
+        # - job_name: kubernetes-pods
         #   kubernetes_sd_configs:
         #   - role: pod
-
         #   relabel_configs:
         #   - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
         #     action: keep
@@ -79,16 +88,43 @@ spec:
         #     action: replace
         #     target_label: kubernetes_pod_name
 
+        affinity:
+          nodeAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+              nodeSelectorTerms:
+              - matchExpressions:
+                - key: node-role.kubernetes.io/monitoring
+                  operator: In
+                  values:
+                  - "true"
+
         storageSpec:
           volumeClaimTemplate:
-            #metadata:
-            #  name: prometheus-kube-prometheus
             spec:
               storageClassName: local-path
-              accessModes: ["ReadWriteOnce"]
               resources:
                 requests:
-                  storage: 20Gi
+                  storage: 50Gi
+
+    alertmanager:
+      alertmanagerSpec:
+        storage:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: local-path
+              resources:
+                requests:
+                  storage: 10Gi
+
+    nodeExporter:
+      serviceMonitor:
+        relabelings:
+        - action: replace
+          regex: (.*)
+          replacement: $1
+          sourceLabels:
+          - __meta_kubernetes_pod_node_name
+          targetLabel: kubernetes_node
 
     grafana:
       enabled: true
@@ -128,7 +164,7 @@ spec:
             url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/control-plane.json
             datasource: Prometheus
 
-      #dashboards:
+      # dashboards:
       #  enabled: true
       #  label: grafana_dashboard
       #  folder: /tmp/dashboards
@@ -148,12 +184,12 @@ spec:
           traefik.ingress.kubernetes.io/redirect-entry-point: https
           traefik.ingress.kubernetes.io/redirect-permanent: "true"
         hosts:
-          - monitoring.k8s.home
+        - monitoring.k8s.home
         path: /
         tls:
-          - secretName: k8s-home-cert
-            hosts:
-              - monitoring.k8s.home
+        - secretName: k8s-home-cert
+          hosts:
+          - monitoring.k8s.home
 
       affinity:
         nodeAffinity:
@@ -164,6 +200,30 @@ spec:
                 operator: In
                 values:
                 - "true"
+
+    kubelet:
+      enabled: true
+      serviceMonitor:
+        metricRelabelings:
+        - action: replace
+          sourceLabels:
+          - node
+          targetLabel: instance
+
+    kubeApiServer:
+      enabled: true
+
+    kubeControllerManager:
+      enabled: false
+
+    kubeScheduler:
+      enabled: false
+
+    kubeProxy:
+      enabled: false
+
+    kubeEtcd:
+      enabled: false
 
   valuesFrom:
   - kind: Secret
