--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -36,6 +36,7 @@ spec:
           static_configs:
           - targets:
             - nas.home:9100
+            - red.home:9100
 
         - job_name: ohm-exporter
           scrape_interval: 15s
