New: add 1 Node Exporter grafana dashboard

--- a/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
+++ b/infra/monitoring/kube-prometheus-stack/kube-prometheus-stack.yaml
@@ -157,6 +157,12 @@ spec:
             options:
               path: /var/lib/grafana/dashboards/flux
       dashboards:
+        default:
+          # Ref: https://grafana.com/grafana/dashboards/11074
+          "1 Node Exporter for Prometheus Dashboard EN v20201010":
+            gnetId: 11074
+            revision: 5
+            datasource: Prometheus
         flux:
           flux-cluster:
             url: https://raw.githubusercontent.com/fluxcd/flux2/main/manifests/monitoring/grafana/dashboards/cluster.json
