--- a/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
+++ b/infra/monitoring/speedtest-prometheus/speedtest-prometheus.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -17,4 +18,4 @@ spec:
   values:
     serviceMonitor:
       enabled: true
-      interval: "5m"
+      interval: 5m
