--- a/infra/monitoring/speedtest-exporter/speedtest-exporter.yaml
+++ b/infra/monitoring/speedtest-exporter/speedtest-exporter.yaml
@@ -16,6 +16,8 @@ spec:
         name: k8s-at-home
         namespace: flux-system
   values:
+    env:
+      TZ: Europe/Vienna
     #affinity:
     #  nodeAffinity:
     #    requiredDuringSchedulingIgnoredDuringExecution:
