--- a/infra/games/minecraft-bedrock/minecraft-bedrock.yaml
+++ b/infra/games/minecraft-bedrock/minecraft-bedrock.yaml
@@ -16,6 +16,8 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
+    extraEnv:
+      TZ: Europe/Vienna
     persistence:
       # storageClass: "rook-ceph-block"
       dataDir:
