--- a/infra/games/minecraft-bedrock/minecraft-bedrock.yaml
+++ b/infra/games/minecraft-bedrock/minecraft-bedrock.yaml
@@ -36,10 +36,15 @@ spec:
       difficulty: easy
       gameMode: creative
       levelName: world
-      serverName: "minecraft (creative)"
-      serviceType: ClusterIP
       maxThreads: 0 # Maximum number of threads the server tries to use. If set to 0 or removed then it uses as many as possible.
       cheats: true
+      serverName: "minecraft (creative)"
+      serviceType: ClusterIP
+      loadBalancerIP:
+        loadBalancerSourceRanges:
+        - 192.168.1.61
+        - 192.168.1.62
+        - 192.168.1.63
 
     nodeSelector:
       kubernetes.io/arch: amd64
