--- a/infra/games/minecraft/minecraft-bedrock.yaml
+++ b/infra/games/minecraft/minecraft-bedrock.yaml
@@ -39,12 +39,7 @@ spec:
       maxThreads: 0 # Maximum number of threads the server tries to use. If set to 0 or removed then it uses as many as possible.
       cheats: true
       serverName: "minecraft (creative)"
-      serviceType: ClusterIP
-      loadBalancerIP:
-        loadBalancerSourceRanges:
-        - 192.168.1.61
-        - 192.168.1.62
-        - 192.168.1.63
+      serviceType: LoadBalancer
 
     nodeSelector:
       kubernetes.io/arch: amd64
