Change: minecraft-bedrock world

--- a/infra/games/minecraft/minecraft-bedrock.yaml
+++ b/infra/games/minecraft/minecraft-bedrock.yaml
@@ -35,7 +35,7 @@ spec:
       version: LATEST
       difficulty: easy
       gameMode: creative
-      levelName: world
+      levelName: KAMELOT
       maxThreads: 0 # Maximum number of threads the server tries to use. If set to 0 or removed then it uses as many as possible.
       cheats: true
       serverName: "minecraft (creative)"
