--- a/infra/flux-system-extras/external-secrets/external-secrets.yaml
+++ b/infra/flux-system-extras/external-secrets/external-secrets.yaml
@@ -10,7 +10,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: external-secrets
-      version: '>=1.15.0-0'
+      version: '>=8.0.1'
   install:
     crds: Create
   interval: 5m0s
