Fix: external-secrets chart name

--- a/infra/flux-system-extras/external-secrets/external-secrets.yaml
+++ b/infra/flux-system-extras/external-secrets/external-secrets.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: external-secrets
+      chart: kubernetes-external-secrets
       sourceRef:
         kind: HelmRepository
         name: external-secrets
