--- a/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    app.kubernetes.io/instance: flux-system
+  name: vault-auth
+  namespace: flux-system
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
