Change: allow kubernetes-external-secrets to user clusterRoleBinding like vault-auth

--- a/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
@@ -17,3 +17,6 @@ subjects:
   - kind: ServiceAccount
     name: vault-auth
     namespace: flux-system
+  - kind: ServiceAccount
+    name: kubernetes-external-secrets
+    namespace: flux-system
