--- a/infra/flux-system-extras/kubernetes-external-secrets/kubernetes-external-secrets.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/kubernetes-external-secrets.yaml
@@ -1,42 +1,42 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: kubernetes-external-secrets
-  namespace: flux-system
-spec:
-  chart:
-    spec:
-      chart: kubernetes-external-secrets
-      sourceRef:
-        kind: HelmRepository
-        name: external-secrets
-      version: '>=8.0.1'
-  install:
-    crds: Create
-  interval: 5m0s
-  releaseName: kubernetes-external-secrets
-  upgrade:
-    crds: CreateReplace
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: kubernetes-external-secrets
+#   namespace: flux-system
+# spec:
+#   chart:
+#     spec:
+#       chart: kubernetes-external-secrets
+#       sourceRef:
+#         kind: HelmRepository
+#         name: external-secrets
+#       version: '>=8.0.1'
+#   #install:
+#   #  crds: Create
+#   interval: 5m0s
+#   releaseName: kubernetes-external-secrets
+#   #upgrade:
+#   #  crds: CreateReplace
 
-  values:
-    env:
-      VAULT_ADDR: https://vault.service.home:8200/
-    image:
-      repository: godaddy/kubernetes-external-secrets
-      tag: 6.0.0
+#   values:
+#     env:
+#       VAULT_ADDR: https://vault.service.home:8200/
+#     image:
+#       repository: godaddy/kubernetes-external-secrets
+#       tag: 6.0.0
 
-    nodeSelector:
-      kubernetes.io/arch: amd64
+#     nodeSelector:
+#       kubernetes.io/arch: amd64
 
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-            - matchExpressions:
-                - key: node-role.kubernetes.io/application
-                  operator: In
-                  values:
-                    - "true"
+#     affinity:
+#       nodeAffinity:
+#         requiredDuringSchedulingIgnoredDuringExecution:
+#           nodeSelectorTerms:
+#             - matchExpressions:
+#                 - key: node-role.kubernetes.io/application
+#                   operator: In
+#                   values:
+#                     - "true"
 
-    serviceMonitor:
-      enabled: true
+#     serviceMonitor:
+#       enabled: true
