Change: added vault ca cert to kubernetes-external-secrets

--- a/infra/flux-system-extras/kubernetes-external-secrets/kubernetes-external-secrets.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/kubernetes-external-secrets.yaml
@@ -21,6 +21,13 @@ spec:
   values:
     env:
       VAULT_ADDR: https://vault.service.home:8200/
+      NODE_EXTRA_CA_CERTS: "/usr/local/share/ca-certificates/my-ca.pem"
+
+    filesFromSecret:
+      certificate-authority:
+        secret: my-ca
+        mountPath: /usr/local/share/ca-certificates
+
     image:
       repository: godaddy/kubernetes-external-secrets
       tag: 6.0.0
