Fix: vaultRole to external secret test

--- a/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
@@ -11,7 +11,7 @@ spec:
   # This role will need to be bound to kubernetes-external-secret's ServiceAccount; see Vault's documentation:
   # https://www.vaultproject.io/docs/auth/kubernetes.html
   # Overrides cluster DEFAULT_VAULT_ROLE
-  #vaultRole: my-vault-role
+  vaultRole: example
   data:
     - name: password
       # The full path of the secret to read, as in `vault read secret/data/hello-service/credentials`
