--- a/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
@@ -2,11 +2,12 @@ apiVersion: "kubernetes-client.io/v1"
 kind: ExternalSecret
 metadata:
   name: hello-vault-service
+  namespace: flux-system
 spec:
   backendType: vault
   # Your authentication mount point, e.g. "kubernetes"
   # Overrides cluster DEFAULT_VAULT_MOUNT_POINT
-  # vaultMountPoint: my-kubernetes-vault-mount-point
+  vaultMountPoint: kubernetes
   # The vault role that will be used to fetch the secrets
   # This role will need to be bound to kubernetes-external-secret's ServiceAccount; see Vault's documentation:
   # https://www.vaultproject.io/docs/auth/kubernetes.html
