--- a/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
@@ -16,9 +16,9 @@ spec:
   data:
     - name: password
       # The full path of the secret to read, as in `vault read secret/data/hello-service/credentials`
-      key: kv/test
+      key: secrets/myapp/config
       property: password
     # Vault values are matched individually. If you have several keys in your Vault secret, you will need to add them all separately
     - name: username
-      key: kv/test
+      key: secrets/myapp/config
       property: username
