--- a/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/test.yaml
@@ -1,24 +1,24 @@
-apiVersion: "kubernetes-client.io/v1"
-kind: ExternalSecret
-metadata:
-  name: hello-vault-service
-  namespace: flux-system
-spec:
-  backendType: vault
-  # Your authentication mount point, e.g. "kubernetes"
-  # Overrides cluster DEFAULT_VAULT_MOUNT_POINT
-  vaultMountPoint: kubernetes
-  # The vault role that will be used to fetch the secrets
-  # This role will need to be bound to kubernetes-external-secret's ServiceAccount; see Vault's documentation:
-  # https://www.vaultproject.io/docs/auth/kubernetes.html
-  # Overrides cluster DEFAULT_VAULT_ROLE
-  vaultRole: example
-  data:
-    - name: password
-      # The full path of the secret to read, as in `vault read secret/data/hello-service/credentials`
-      key: secrets/myapp/config
-      property: password
-    # Vault values are matched individually. If you have several keys in your Vault secret, you will need to add them all separately
-    - name: username
-      key: secrets/myapp/config
-      property: username
+# apiVersion: "kubernetes-client.io/v1"
+# kind: ExternalSecret
+# metadata:
+#   name: hello-vault-service
+#   namespace: flux-system
+# spec:
+#   backendType: vault
+#   # Your authentication mount point, e.g. "kubernetes"
+#   # Overrides cluster DEFAULT_VAULT_MOUNT_POINT
+#   vaultMountPoint: kubernetes
+#   # The vault role that will be used to fetch the secrets
+#   # This role will need to be bound to kubernetes-external-secret's ServiceAccount; see Vault's documentation:
+#   # https://www.vaultproject.io/docs/auth/kubernetes.html
+#   # Overrides cluster DEFAULT_VAULT_ROLE
+#   vaultRole: example
+#   data:
+#     - name: password
+#       # The full path of the secret to read, as in `vault read secret/data/hello-service/credentials`
+#       key: secrets/myapp/config
+#       property: password
+#     # Vault values are matched individually. If you have several keys in your Vault secret, you will need to add them all separately
+#     - name: username
+#       key: secrets/myapp/config
+#       property: username
