--- a/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
+++ b/infra/flux-system-extras/kubernetes-external-secrets/rbac.yaml
@@ -1,13 +1,13 @@
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
-metadata:
-  name: role-tokenreview-binding
-  namespace: flux-system
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: system:auth-delegator
-subjects:
-  - kind: ServiceAccount
-    name: kubernetes-external-secrets
-    namespace: flux-system
+# apiVersion: rbac.authorization.k8s.io/v1beta1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: role-tokenreview-binding
+#   namespace: flux-system
+# roleRef:
+#   apiGroup: rbac.authorization.k8s.io
+#   kind: ClusterRole
+#   name: system:auth-delegator
+# subjects:
+#   - kind: ServiceAccount
+#     name: kubernetes-external-secrets
+#     namespace: flux-system
