--- a/infra/games/minecraft-java/minecraft-java.yaml
+++ b/infra/games/minecraft-java/minecraft-java.yaml
@@ -44,7 +44,7 @@ spec:
       forceReDownload: true
       jvmOpts: "-Xms4G -Xmx4G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true"
       memory: 4096M
-      #maxTickTime: -1
+      maxTickTime: -1
       icon: https://www.freeiconspng.com/uploads/minecraft-enderman-icon-27.png
       difficulty: hard
       gameMode: survival
@@ -54,6 +54,14 @@ spec:
       serverName: "minecraft (survival)"
       serviceType: LoadBalancer
       loadBalancerIP: 192.168.1.62
+    
+      extraPorts:
+        - name: geyser
+          containerPort: 19133
+          service:
+            enabled: true
+            type: ClusterIP
+            port: 19133
 
     nodeSelector:
       kubernetes.io/arch: amd64
