Change: minecraft-java explicit disable of ingress

--- a/infra/games/minecraft-java/minecraft-java.yaml
+++ b/infra/games/minecraft-java/minecraft-java.yaml
@@ -62,6 +62,8 @@ spec:
             enabled: true
             type: ClusterIP
             port: 19133
+          ingress:
+            enabled: false
 
     nodeSelector:
       kubernetes.io/arch: amd64
