--- a/infra/games/minecraft-java/minecraft-java.yaml
+++ b/infra/games/minecraft-java/minecraft-java.yaml
@@ -60,7 +60,8 @@ spec:
           containerPort: 19133
           service:
             enabled: true
-            type: ClusterIP
+            type: LoadBalancer
+            loadBalancerIP: 192.168.1.62
             port: 19133
           ingress:
             enabled: false
