--- a/infra/games/minecraft-java/minecraft-java.yaml
+++ b/infra/games/minecraft-java/minecraft-java.yaml
@@ -57,12 +57,12 @@ spec:
     
       extraPorts:
         - name: geyser
-          containerPort: 19133
+          containerPort: 19133/UDP
           service:
             enabled: true
             type: LoadBalancer
             loadBalancerIP: 192.168.1.62
-            port: 19133
+            port: 19133/UDP
           ingress:
             enabled: false
 
