--- a/infra/games/minecraft/minecraft-bedrock.yaml
+++ b/infra/games/minecraft/minecraft-bedrock.yaml
@@ -39,8 +39,7 @@ spec:
       maxThreads: 0 # Maximum number of threads the server tries to use. If set to 0 or removed then it uses as many as possible.
       cheats: true
       serverName: "minecraft (survival)"
-      serviceType: NodePort
-      nodePort: 19133
+      serviceType: LoadBalancer
 
     nodeSelector:
       kubernetes.io/arch: amd64
